--- a/styleCheatsheet.css
+++ b/styleCheatsheet.css
@@ -6,17 +6,15 @@
 body {
   background-image: url('backgroundHTML&CSS.jpg');
   background-size: cover;
-}
-
-header {
   display: flex;
   justify-content: center;
-  padding-bottom: 10px;
 }
 
-main {
+
+main, nav, header {
   display: flex;
   justify-content: center;
+  padding: 5px 0px 5px 0px;
 }
 
 h1 {
@@ -26,7 +24,7 @@ h1 {
 
 h2 {
   border-radius: 20px;
-  background-color: lightsteelblue;
+  background-color: lightseagreen;
   font-size: 25px;
   color: white;
 }
@@ -36,8 +34,10 @@ h1, h2 {
   text-align: center;
 }
 
-p {
+
+p, h3 {
   text-align: justify;
+  padding: 0px 30px 0px 30px
 }
 
 table {
@@ -61,26 +61,60 @@ td {
 
 .container {
   border-radius: 40px;
-  padding: 10px 30px 10px 30px;
+  padding: 0px 30px 0px 30px;
   width: 1000px;
 }
 
+button{
+  width: 200px;
+  height: 25px;
+  background-color: darkcyan;
+  border-radius: 10px;
+  border: 0px;
+}
+#links{
+  background-color: none;
+  justify-content: center;
+  text-align: center;
+}
+
+button.navbutton{
+  height: 35px;
+  width: 520px;
+  background-color: lightseagreen;
+  color: white;
+  border-radius: 10px;
+  border: 0px;
+}
+
+.none{
+  background-color: transparent;
+  padding: 0px, 0px, 0px, 0px;
+}
 #header-container {
-  background-color: lightsteelblue;
+  background-color: steelblue;
 }
 
 #main-container {
   background-color: mintcream;
+  heigth: auto;
+  padding: 20px;
 }
+
+#body-container{
+  background-color: lightsteelblue;
+  border-radius: 20px;
+  width: 1100px;
+  height: auto;
+  padding-bottom: 15px;
+}
+
 
 .code {
   font-family: monospace;
   font-size: 17px;
 }
 
-.example {
-  padding: 15px 0px 15px 0px;
-}
 
 .center {
   text-align: center;
